Add Spock Framework